--- a/package.json
+++ b/package.json
@@ -8,12 +8,15 @@
     "url": "git://github.com/dominictarr/mfr-query-stream.git"
   },
   "dependencies": {
+    "hyperloadmore": "^1.1.0",
+    "libnested": "^1.3.1",
+    "pull-more": "^1.0.0",
+    "pull-stream": "^3.6.2"
   },
-  "devDependencies": {
-  },
+  "devDependencies": {},
   "scripts": {
     "test": "set -e; for t in test/*.js; do node $t; done"
   },
   "author": "'Dominic Tarr' <dominic.tarr@gmail.com> (dominictarr.com)",
-  "license": "MIT"  
+  "license": "MIT"
 }
